tools/tests/errors/class_hash_wrong_type.experr
_hash_
must return an Integer
